# UAV-Optimization

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  student_a_1.docx  student_b_1.docx
common/: __init__.py  channel.py  config.py  data_loader.py
conf/: config.yaml
docs/: reading_log.md  shared_config.md  step2_data_loader.md  step3_features.md  step4_data_pipeline.md
project/: uav_extended_simulation.py
scripts/: generate_dataset.py  make_eubucco_osm_comparison.py  show_city.py  show_config.py  show_features.py
student_a/: __init__.py  dataset.py  features.py
tests/: test_config.py  test_data_loader.py  test_dataset.py  test_features.py
